Review for 'BookClient' project

--- a/src/main/resources/com/capgemini/starterkit/bookclient/css/standard.css
+++ b/src/main/resources/com/capgemini/starterkit/bookclient/css/standard.css
@@ -15,5 +15,8 @@
 	-fx-font-weight: bold;
 	-fx-alignment: center ;
 	-fx-background-color: skyblue;
+	/*
+	 * REV: nie ma takiego property
+	 */
 	-fx-text-background-color: red;
 }
